package com.aibert.dosw.domain.exceptions;

public class InvalidInvitationException extends RuntimeException {
    public InvalidInvitationException(String message) { super(message); }
}
