package com.aibert.dosw.domain.model.user;

public enum SessionStatus {
    PENDING, ACCEPTED, REJECTED, COMPLETED
}
