package com.aibert.dosw.domain.model.user;

public enum VisibilityLevel {
    PUBLIC, PRIVATE, SPECIFIC
}
