@startuml
title Social Service – Diagrama de Clases

skinparam linetype ortho
skinparam ArrowThickness 1.4
skinparam ArrowFontSize 11
skinparam PackagePadding 20
skinparam ClassPadding 15

' =======================
' Domain
' =======================
package "Domain" {

  class AvailabilityConfig {
    - userId: UUID
    - visibility: VisibilityLevel
  }

  class Invitation {
    - id: UUID
    - inviterId: UUID
    - used: Boolean
    - inviteEmail: String
    - referralCode: String
  }

  class StudySession {
    - id: UUID
    - creatorId: UUID
    - scheduledAt: LocalDateTime
    - status: SessionStatus
  }

  enum SessionStatus {
    PENDING
    ACCEPTED
    REJECTED
    COMPLETED
  }

  enum VisibilityLevel {
    PRIVATE
    SPECIFIC
    PUBLIC
  }

  class InvalidInvitationException
  class SessionNotFoundException
}

' =======================
' Entrypoints
' =======================
package "Entrypoints" {

  class AvailabilityController {
    + saveConfig(dto): void
  }

  class InvitationController {
    + sendInvitations(dto): void
  }

  class StudySessionController {
    + createSession(dto): StudySessionResponseDTO
  }
}

' =======================
' Application (Use Cases)
' =======================
package "Application (Use Cases)" {

  interface AvailabilityUseCase {
    + saveConfig(userId, dto): void
  }

  interface InvitationUseCase {
    + sendInvitations(userId, dto): void
  }

  interface StudySessionUseCase {
    + createSession(userId, dto): StudySession
  }
}

' =======================
' Ports (OUT)
' =======================
package "Ports (OUT)" {

  interface AvailabilityRepositoryPort {
    + save(config): AvailabilityConfig
  }

  interface InvitationRepositoryPort {
    + save(invitation): Invitation
  }

  interface StudySessionRepositoryPort {
    + save(session): StudySession
  }

  interface SocialEmailServicePort {
    + sendInvitationEmail(invitation): void
  }
}

' =======================
' Infrastructure
' =======================
package "Infrastructure" {

  class AvailabilityRepositoryAdapter
  class InvitationRepositoryAdapter
  class StudySessionRepositoryAdapter

  class SmtpSocialEmailService

  interface AvailabilityJpaRepository
  interface InvitationJpaRepository
  interface StudySessionJpaRepository
}

' =======================
' Relations – Entrypoints → Application
' =======================
AvailabilityController --> AvailabilityUseCase : usa
InvitationController --> InvitationUseCase : usa
StudySessionController --> StudySessionUseCase : usa

' =======================
' Relations – Application → Ports
' =======================
AvailabilityUseCase --> AvailabilityRepositoryPort : opera con
InvitationUseCase --> InvitationRepositoryPort : opera con
InvitationUseCase --> SocialEmailServicePort : notifica
StudySessionUseCase --> StudySessionRepositoryPort : opera con

' =======================
' Relations – Infrastructure (sin labels para limpieza visual)
' =======================
AvailabilityRepositoryAdapter --> AvailabilityRepositoryPort
InvitationRepositoryAdapter --> InvitationRepositoryPort
StudySessionRepositoryAdapter --> StudySessionRepositoryPort
SmtpSocialEmailService --> SocialEmailServicePort

AvailabilityRepositoryAdapter --> AvailabilityJpaRepository
InvitationRepositoryAdapter --> InvitationJpaRepository
StudySessionRepositoryAdapter --> StudySessionJpaRepository

@enduml